Footer fix Main Wrap added Banner changed Mobile Menu fixed

--- a/css/greezy.css
+++ b/css/greezy.css
@@ -9,9 +9,16 @@ html *{
 * {
     box-sizing: border-box;
 }
-
+html, body {height: 100%;}
 
 /* GRID LAYOUT */
+
+.grid-wrap{
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -100px;
+}
 
 .grid{
 	width:100%;
@@ -362,8 +369,8 @@ h5{font-size: 1.1rem;}
 	content:" ";
 	position:absolute;
 	top:0px;
-	left:-68px;
-	padding-left:36px;
+	left:-67px;
+	padding-left:35px;
 	width:32px;
 	height:48px;
 	background-color:#2a1c3f;
@@ -372,4 +379,10 @@ h5{font-size: 1.1rem;}
 	background-position: right center;
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
+}
+
+
+footer,.push {
+  height: 100px;
+  clear:both;
 }
